Attempt to avoid double scroll bar on site/page containers

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Raleway&family=Ubuntu&display=swap');
 
 body {
-	margin: 0 auto;
+	margin: 0;
   font-family: 'Raleway',
   sans-serif;
   position: relative;
@@ -9,10 +9,15 @@ body {
   overflow-y: hidden;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .site-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  overflow-y: hidden;
 }
 
 .page-container {
